First commit of w1 d1 HTML

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Valeria Pop page</title>
-    </head>
+    </head>git remote add origin https://github.com/ValeriaO/HTML-basics.git
     <body style="background-color:#DDF5B5;">
     <a href="https://www.linkedin.com/in/valeria-pop-oz/" target="_blank">
         <img src="IMG-20201115-WA0045.jpg" alt="Valeria" height="300px" />
