--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
     <h2>About me</h2>
 
     <div style="background:#F5E6B5">
-        <p>My story starts <span style="color:#00ff84">here</span></p>
+        <h3>Who am I <span style="color:#8B0BA2">in a nutshell?</span></h3>
         <ul>
             <li>Tech Recruiter with 10+ years in HR, Recruitment & Headhunting; in-house, remote, freelance</li>
             <li>5+ years of hands-on experience in tech recruitment and sofware startups</li>
             <li>Passionate about tech</li>
             <li>Born and raised in Uzbekistan, lived in Russia, France, Germany</li>
+        </ul>
+    </div>
+
+    <div style="background:antiquewhite">
+        <span>My professional experience</span>
+        <ul>
+            <li>Technical Recruiter at FlixMobility, since 10.2019</li>
+            <li>Recruitment Lead at a YCombinator stealth software startup</li>
+            <li>Recruiter at InstatSport</li>
+            <li>Global Talent Acquisition Specialist at Faurecia</li>
+            <li>HR Manager at Itella Connexions</li>
+            <li>HR Specialist at TNS Gallup Media</li>
+            <li>HR Assistant at KPMG</li>
+            <li>Jr. HR Specialist at British American Tobacco</li>
         </ul>
     </div>
 
