Changes/add experience

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li>Tech Recruiter with 10+ years in HR, Recruitment & Headhunting; in-house, remote, freelance</li>
             <li>5+ years of hands-on experience in tech recruitment and sofware startups</li>
-            <li>Passionate about tech</li>
+            <li>Passionate about tech!</li>
             <li>Born and raised in Uzbekistan, lived in Russia, France, Germany</li>
         </ul>
     </div>
