Updates html css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <title>Valeria Pop page</title>
+        <link rel="stylesheet" href="styles.css"/>
+
     </head>
     <body style="background-color:#DDF5B5;">
     <a href="https://www.linkedin.com/in/valeria-pop-oz/" target="_blank">
         <img src="IMG-20201115-WA0045.jpg" alt="Valeria" height="300px" />
     </a>
     <h1>Hello World! This is Valeria, I am a <a href="https://www.linkedin.com/in/valeria-pop-oz/" target="_blank">Technical Recruiter</a></h1>
+    
     <h2>About me</h2>
 
     <div style="background:#F5E6B5">
@@ -40,6 +43,11 @@
     <input type="number" />
     <input type="file" />
     <input type="button" value="Send" />
+
+<div style="margin-top: 48px;">
+    <div class="box red">What do I love doing?</div>
+    <div class="box green">What do I do well?</div>
+</div>
 
 </body>
  
